# SmartCity

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  map.osm  notes.txt  parser.py
.github/workflows/: main.yml
city-2d-viewer/: Cargo.toml
city-2d-viewer/src/: main.rs
city-graph/: Cargo.toml
city-graph/src/: lib.rs
cityAPI/: app.py  requirements.txt
cityDisplay/: Dockerfile  index.html  index.js  way_maps_example.js
cityDraw/: Cargo.toml
cityDraw/src/: highway.rs  main.rs
cityDrawWeb/: package.json
cityDrawWeb/public/Assets/: city.mtl
cityDrawWeb/src/: App.js  Scene.css  Scene.js
cityServer/: Dockerfile  manageMQTT.py  requirements.txt  server.py
cityServer/graphs/: roads.py  way_maps_example.json
experiments/: clientTest.js  package.json  publish.py  serverTest.js  subscriber.py
osm-3d/: Cargo.toml
osm-3d/data/: map.xml.pbf
osm-3d/src/: main.rs
osm-parser/: Cargo.toml
osm-parser/src/: lib.rs
src/: testGeneration.js
test/: Generation.py  testTree.py
