[package]
name = "cityDraw"
version = "0.1.0"
authors = ["Aurelien Foucault <aurelien.foucault@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.29"
nalgebra = "0.24"
mongodb = {version = "1.2", features=["sync"], default-features = false}
bson = "1.2.0"
serde = { version = "=1.0", features = ["derive"] }
